<resources>
    <string name="app_name">BlissAngkor_android</string>
    <string name="start">探索你的精采旅程</string>
    <string name="rember_me">記住我</string>
    <string name="forget_pssword">忘記密碼?</string>
    <string name="login">登入</string>
    <string name="singup">註冊帳號</string>
    <string name="search_bar">輸入目的地，景點或活動…</string>
    <string name="hot_local">熱門目的地</string>
    <string name="exclusive">獨家主題</string>
    <string name="hot_stroke">熱門行程</string>
    <string name="recommend_hotel">推薦住宿</string>
    <string name="all">全部</string>
    <string name="shopping_car">購物車</string>
    <string name="make_out_bills">結算</string>
    <string name="Companion">旅伴系統</string>
    <string name="search_Companion">尋找旅伴</string>
    <string name="country">國家</string>
    <string name="lacal">地區</string>
    <string name="addMy_stroke">添加我的行程</string>
    <string name="i_want_companion">我要尋找旅伴</string>
    <string name="add">添加</string>
    <string name="wish_list">願望清單</string>
    <string name="integral">積分</string>
    <string name="coupon_code">優惠碼</string>
    <string name="my_Order">我的訂單</string>
    <string name="account_setting">帳戶設定</string>
    <string name="qa">諮詢中心</string>
    <string name="language">更改語言/貨幣</string>
    <string name="logout">登出</string>
    <string name="problem">常見問題</string>
    <string name="qa_list">諮詢表單</string>
    <string name="qa_log">諮詢紀錄</string>
    <string name="send">送出</string>
    <string name="problem_type">問題分類</string>
    <string name="oder_number">訂單編號</string>
    <string name="oder_number_input">輸入您的訂單編號</string>
    <string name="problem_description">問題描述</string>
    <string name="problem_description_input">請輸入問題(1000字以內)</string>
    <string name="isLogout">確認登出?</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="change_language">更改語言</string>
    <string name="change_currency">更改貨幣</string>
    <string name="pssword_now">當前密碼</string>
    <string name="pssword_new">新的密碼</string>
    <string name="pssword_now_input">輸入當前密碼</string>
    <string name="pssword_new_input">輸入新的密碼</string>
    <string name="pssword_new_confirm">確認新的密碼</string>
    <string name="modify">確認修改</string>
    <string name="nPayOrder">未付款訂單</string>
    <string name="historyOrder">歷史訂單</string>
    <string name="edit">編輯</string>

    <!-- pageFourMenu -->
    <string name="search">尋找旅伴</string>
    <string name="myInfo">我的資料</string>
    <string name="messenger">訊息中心</string>
    <string name="myPhoto">我的相簿</string>
    <string name="myCollection">我的收藏</string>
    <string name="memberSearch">會員搜尋</string>
    <string name="setting">其他設定</string>
    <string name="Disclaimer">免責聲明</string>


</resources>
