<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button"
            android:layout_marginLeft="20dp"
            android:text="TextView"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignTop="@+id/line"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:background="@android:color/white"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/my_Order" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button2"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@+id/line"
            android:text="TextView"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignTop="@+id/line"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_toEndOf="@+id/line"
            android:background="@android:color/white"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/wish_list" />

        <LinearLayout
            android:id="@+id/line"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray"
            android:orientation="vertical"></LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:background="?attr/colorPrimary"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <Button
                android:id="@+id/button3"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_above="@+id/textView"
                android:layout_alignEnd="@+id/textView"
                android:background="@android:color/transparent"
                android:text="94"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/integral"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:layout_alignBottom="@+id/line2"
                android:layout_toStartOf="@+id/line2"
                android:layout_marginEnd="12dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_above="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:layout_marginLeft="8dp"
                android:background="@android:color/transparent"
                android:text="88"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="12dp"
                android:text="@string/coupon_code"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/textView2"
                android:background="@android:color/white"
                android:orientation="vertical"></LinearLayout>
        </RelativeLayout>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="13dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/imageButton"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="17dp"
            android:layout_toRightOf="@+id/imageButton"
            android:text="XXX"
            android:textSize="30sp" />
    </RelativeLayout>

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/relativeLayout"
        android:background="@drawable/toolbar_dropshadow" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="7dp"
        android:background="@android:color/white" />

</LinearLayout>