<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loginbg"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="78dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/login_logo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="307dp"
            android:layout_height="245dp"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="13dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="password"
                    android:inputType="numberPassword"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:text="@string/rember_me" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:text="@string/forget_pssword" />

                    <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/button2"
                        android:layout_weight="1"
                        android:background="@color/black"
                        android:orientation="vertical"></LinearLayout>

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/button2"
                        android:layout_toRightOf="@+id/button2"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:text="@string/singup" />

                    <Button
                        android:id="@+id/loginBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:background="@color/f69"
                        android:text="@string/login"
                        android:textColor="@color/ffff" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="74dp"
            android:layout_marginRight="74dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/facebook"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/google"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:background="@drawable/wechat"
                android:scaleType="fitCenter" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="13dp"
        android:background="@android:color/transparent"
        android:text="@string/fa_times"
        android:textColor="@color/black" />

</RelativeLayout>